2001-10-25 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* fixed bug in joystick routines that caused it to fly wildly around
	   on win32 when having no joystick


2001-10-25 Daniel Horn <hellcatv@hotmail.com>
	* added ability to delete playing sounds
	* added ability to have explosions without alpha (GL_ONE,GL_ONE)
	* changed GFXPickLights's checking if object was too large to work with to use floats so it won't over flow
	* fixed GFXPickLights () to actually work! (now lights are picked out of a 3d hash table)
	* added the option to put star system lights into the 3d hash table light="0 1l"  means 0 is on globally and 1 is on for starships "near enough" Now we only have 1 global light and 1 attenuated light for starships "close enough" Framerates should skyrocket for GeForce cards
	* learned not to debug with fastmath on
	* added default states for cockpits
	* added default space background color if backgrounds should be off
	* modified test.xml to make planets farther apart
	* modified config_xml.cpp to print out the missing var's default val
	
2001-10-25 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* implemented orders in mission file (preliminary)
	* wrote stuff to use it in createObjects(), but could not be used properly
	

2001-10-25 Daniel Horn <hellcatv@hotmail.com>
	* added starsystem based lighting (now planets may emit lights
	* define a light at the top of a system then any planets may use such a light. 
	* data directory changed so that starships get hot (glow) when they get close to the sun.  Ambient light index increased for dinged up monitors (you can edit it yourself... 


2001-10-24 Daniel Horn <hellcatv@hotmail.com>

	* added Turrets to the scenes.  They may use any preconcieved AI script, but right now they just load "turntowards" and "fireat" target
	* made an ifdef to allow the user to fly a turret  #ifdef IPILOTTURRET
	* IFLYTURRET will only work if the unit in question has a turret